crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_qualified_this_expression.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class QualifiedThis {
  class Inner {
    Object method() {
      return QualifiedThis.this;
    }
  }
}

diagnostics:
(none)
