crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_record_declaration_header_body_and_compact_constructor.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
record Point(@Deprecated int x, String... labels) implements Named {
  Point {
    labels = labels.clone();
  }

  public String name() {
    return labels[0];
  }
}

interface Named {
}

diagnostics:
(none)
