crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_record_type_and_match_all_patterns.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
record Pair(int left, int right) {
}

class Patterns {
  int method(Object value) {
    if (value instanceof Pair(int left, _)) {
      return left;
    }
    return switch (value) {
      case Pair(int left, int right) -> left + right;
      case String text when !text.isEmpty() -> text.length();
      default -> 0;
    };
  }
}

diagnostics:
(none)
