crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_sealed_non_sealed_and_permits_contextual_keywords.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
sealed class SealedClass permits FinalClass, OpenClass {
}

final class FinalClass extends SealedClass {
}

non-sealed class OpenClass extends SealedClass {
}

sealed interface SealedInterface permits OpenInterface {
}

non-sealed interface OpenInterface extends SealedInterface {
}

diagnostics:
(none)
