crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_selector_relational_expressions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SelectorRelationalExpressions {
  int index;
  java.util.List<String> items;

  boolean method(String[] names) {
    return this.index < names.length
      && names[0].length() < this.items.size()
      && this.items.size() < names.length;
  }
}

diagnostics:
(none)
