crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_single_module_import_declaration.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import module java.base;

class ModuleImport {
}

diagnostics:
(none)
