crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_string_template_expressions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class StringTemplates {
  String greeting(String name) {
    return STR."Hello \{name}";
  }
}

diagnostics:
(none)
