crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_super_field_access_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SuperFieldAccess extends Base {
  int field;

  class Inner extends Base {
    int method() {
      return super.field + SuperFieldAccess.super.field;
    }
  }
}

class Base {
  int field;
}

diagnostics:
(none)
