crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_switch_block_statement_group.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchGroups {
  void method(int value) {
    switch (value) {
      case 1:
      case 2:
        value++;
        break;
    }
  }
}

diagnostics:
(none)
