crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_switch_rule_with_throw_statement.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ThrowSwitchRule {
  int method(Object value) {
    return switch (value) {
      case null -> throw new IllegalArgumentException();
      default -> 0;
    };
  }
}

diagnostics:
(none)
