crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_switch_statement_rules_groups_labels_and_guards.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Switches {
  void statement(Object value, int count) {
    switch (value) {
      case null, default -> {
      }
      case String s when s.isEmpty() -> s.trim();
      case Integer i -> {
      }
    }

    switch (count) {
      case 1:
      case 2:
        break;
      default:
        break;
    }
  }
}

diagnostics:
(none)
