crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_ternary_switch_rule_labels.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class TernarySwitchRuleLabels {
  String guarded(Object value, boolean condition) {
    return switch (value) {
      case Integer number when condition ? true : false -> "integer";
      default -> "other";
    };
  }

  int constant(int value) {
    return switch (value) {
      case true ? 1 : 2 -> 10;
      default -> 0;
    };
  }
}

diagnostics:
(none)
